--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,11 @@
 				<button class="playerCountOption" onclick="start(2)">2 Player</button>
 				<button class="playerCountOption" onclick="start(3)">3 Player</button>
 				<button class="playerCountOption" onclick="start(4)">4 Player</button>
+				<select name="startPos" id="startPosSelect">
+					<option value="pickaxe">The Pickaxe (recommended)</option>
+					<option value="corners">Corners Custom</option>
+					<option value="custom">Fully Custom</option>
+				</select>
 			</div>
 		</div>
 
