--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 					t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
 					y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
 			})(window, document, "clarity", "script", "n7a6023wng");
-		</script>
-	  <link rel="stylesheet" href="styles.css"> 
+		</script><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3629151843411005"
+     crossorigin="anonymous"></script>
+	  	<link rel="stylesheet" href="styles.css"> 
 		<style>
 		</style>
 	<body>
