fix merge conflict

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 					t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
 					y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
 			})(window, document, "clarity", "script", "n7a6023wng");
-		</script><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3629151843411005"
+		</script>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3629151843411005"
      crossorigin="anonymous"></script>
-	  	<link rel="stylesheet" href="styles.css"> 
+	  <link rel="stylesheet" href="styles.css"> 
 		<style>
 		</style>
 	<body>
@@ -21,6 +22,7 @@
 
 			</div>
 			<div id="playerCountChoices">
+				<button class="playerCountOption" onclick="start(1)">Play AI</button>
 				<button class="playerCountOption" onclick="start(2)">2 Player</button>
 				<button class="playerCountOption" onclick="start(3)">3 Player</button>
 				<button class="playerCountOption" onclick="start(4)">4 Player</button>
@@ -32,6 +34,7 @@
 			</div>
 		</div>
 
+  	<script src="js/ai.js"></script>
   	<script src="js/space.js"></script>
 		<script src="js/main.js"></script>
 	</head>
