--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
 				<button class="rematch">Rematch</button>
 			</div>
 		</dialog>
+		<dialog id="aiOptionsScreen">
+			<label for="aiSearchDepth">AI Difficulty: </label>
+			<input type="number" id="aiSearchDepth" value="3" max="7">
+			<br>
+			<input type="submit" value="Submit"/>
+		</dialog>
 
   	<script src="js/ai.js"></script>
   	<script src="js/space.js"></script>
