change name to corners custom

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<br/>
 				<select name="startPos" id="startPosSelect">
 					<option value="pickaxe">The Pickaxe (recommended)</option>
-					<option value="corners">Corners Custom</option>
+					<option value="corners">Corners</option>
 					<option value="custom">Fully Custom</option>
 				</select>
 			</div>
