--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 		</dialog>
 		<dialog id="aiOptionsScreen">
 			<label for="aiSearchDepth">AI Difficulty: </label>
-			<input type="number" id="aiSearchDepth" value="3" max="7">
+			
+			<input type="number" id="aiSearchDepth" value="3" min="1" max="7">
 			<br>
 			<input type="submit" value="Submit"/>
 		</dialog>
