--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3629151843411005"
      crossorigin="anonymous"></script>
 	  <link rel="stylesheet" href="styles.css"> 
+		<link rel="icon" type="image/x-icon" href="/favicon-32x32.ico">
 		<style>
 		</style>
 	<body>
