change layout completely

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 		<style>
 		</style>
 	<body>
+		<div class="sidebar">
+			<a class="active" href="#home">Home</a>
+		</div>
 		<div id="container">
 			<div id="board" style="display:none">
 				<div id="evalBar">
