remove unused imports from index.html

--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,9 @@
         y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
     })(window, document, "clarity", "script", "nim2reddm4");
   </script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3629151843411005"
-   crossorigin="anonymous"></script>
+  <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3629151843411005"
+   crossorigin="anonymous"></script> -->
   <link rel="icon" type="image/x-png" href="/favicon-32x32.png">
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
   <app-root></app-root>
