add manifest to html

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
   <link rel="shortcut icon" href="/favicon.ico">
 
   <meta name="description" content="Play DaDotz, a fun board game where tiles explode when they reach 4. Click to grow tiles and strategize your moves! Created by Heinz Ketchup.">
