--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,6 @@
     <link rel="icon" type="image/x-png" href="/favicon-32x32.png" />
   </head>
   <body>
-    <app-root></app-root>
+    <app-root aria-hidden="false"></app-root>
   </body>
 </html>
