change credit name

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 
     <meta
       name="description"
-      content="Play DaDotz, a fun board game where tiles explode when they reach 4. Click to grow tiles and strategize your moves! Created by Heinz Ketchup."
+      content="Play DaDotz, a fun board game where tiles explode when they reach 4. Click to grow tiles and strategize your moves! Created by Heinrich Xiao."
     />
     <link
       href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap"
